--- a/src/app/races/races.component.html
+++ b/src/app/races/races.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="races.length > 0">
-  <div *ngFor="let race of races">
+  <div *ngFor="let race of races  | slice:0:4">
     <h2 >{{race.name}}</h2>
   </div>
 </div>
