end exercice "12. Custom validators in forms"

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -5,7 +5,7 @@
   <a class="navbar-brand">PonyRacer</a>
   <div id="navbar" [class.collapse]="navbarCollapsed" class="navbar-collapse">
     <div class="nav navbar-nav mr-auto">
-      <a class="nav-item nav-link" href="" routerLink="/" routerLinkActive #route="routerLinkActive">Home</a>
+      <a class="nav-item nav-link" href="" routerLink="/" routerLinkActive="selected-menu" #route="routerLinkActive">Home</a>
       <a class="nav-item nav-link" href="" routerLinkActive="selected-menu" routerLink="/races">Races</a>
     </div>
   </div>
