--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,22 +2,38 @@
   <h2>Register</h2>
   <div class="row">
       <form (ngSubmit)="register()" [formGroup]="userForm">
+
         <div class="form-group">
           <label for="login" id="login-label">Login</label>
-          <input class="form-control ng-untouched ng-pristine ng-invalid" type="text" formControlName="login" ngModel required>
-          <div *ngIf="userForm.get('login').hasError('required')">Login is required</div>
+          <input class="form-control" type="text" formControlName="login" ngModel required minlength="3">
+          <div *ngIf="loginCtrl.dirty && loginCtrl.hasError('required')">Login is required</div>
+          <div id="login-length-error" *ngIf="loginCtrl.dirty && userForm.get('login').hasError('minlength')"> Your login should be at least 3 characters</div>
         </div>
-        <div class="form-group">
-          <label for="password" id="password-label">Password</label>
-          <input class="form-control ng-untouched ng-pristine ng-invalid" type="password" formControlName="password" ngModel required>
-          <div *ngIf="userForm.get('password').hasError('required')">Password is required</div>
+
+        <div formGroupName="passwordForm">
+            <div class="form-group">
+              <label>Password</label>
+              <input class="form-control" type="password" formControlName="password" required >
+              <div *ngIf="passwordCtrl.dirty && passwordCtrl.hasError('required')">Password is required</div>
+            </div>
+            <div class="form-group">
+              <label>Confirm password</label>
+              <input class="form-control" type="password" formControlName="confirmPassword" required>
+              <div *ngIf="confirmPasswordCtrl.dirty && confirmPasswordCtrl.hasError('required')">Confirm your password</div>
+            </div>
+            <div id="password-matching-error" *ngIf="passwordForm.dirty && passwordForm.hasError('matchingError')">Your password does not match</div>
         </div>
+
         <div class="form-group">
           <label for="birthYear" id="birthYear-label">Date of birth</label>
-          <input class="form-control ng-untouched ng-pristine ng-invalid" type="number" formControlName="birthYear" ngModel required>
+          <input class="form-control ng-untouched ng-pristine ng-invalid" type="number" formControlName="birthYear" required>
           <div *ngIf="userForm.get('birthYear').hasError('required')">Birth year is required</div>
+          <div id="invalid-year-error" *ngIf="userForm.get('birthYear').hasError('birthYear')">This is not a valid year</div>
         </div>
+        <div id="registration-error" [hidden]="!registrationFailed">Try again with another login.</div>
+
         <button class="btn btn-primary" [disabled]="userForm.invalid" type="submit">Let’s go!</button>
+
       </form>
   </div>
 </div>
