--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,5 +4,5 @@
 
 <div class="text-center">
 <a class="btn btn-primary" routerLink="register">Register</a>
- <a class="btn btn-primary" routerLink="races">Races</a>
+ <a class="btn btn-primary" routerLink="login">Login</a>
 </div>
